--- a/src/2-form.html
+++ b/src/2-form.html
@@ -13,6 +13,13 @@
       <a href="./index.html">Go to home</a>
     </section>
 
+    <form class="feedback-form">
+      <label> Email <input type="email" name="email" /> </label>
+      <label> Message <textarea name="message"></textarea></label>
+
+      <button type="submit">Submit</button>
+    </form>
+
     <script src="./js/2-form.js" type="module"></script>
   </body>
 </html>
